Fixes for Jens' bugs: * next button not aligned to right * video doesn't take up full screen width

--- a/source/application/Style/soloStimulus.styl
+++ b/source/application/Style/soloStimulus.styl
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    align-items: center;
     justify-items: center;
 }
 
