--- a/source/application/Style/video.styl
+++ b/source/application/Style/video.styl
@@ -59,7 +59,8 @@
 .video-wrapper
 	position: relative
 	padding-bottom: 43.25%
-	width: 100%
+	height: 0
+	margin-bottom: 1rem
 
 	video, iframe
 		position: absolute
@@ -67,7 +68,6 @@
 		left: 0
 		width: 100%
 		height: 100%
-		max-height: 70vh;
 
 .stimulus-label
 
